--- a/SCSS/evenement.html
+++ b/SCSS/evenement.html
@@ -39,11 +39,20 @@
 
     <div class="eventBx">
 
-        <h2>ÉVÉNEMENTS À VENIR</h2><br>
-        <img src="images/marchésBx.png" alt="" class="marchesBrx"><br>
-        <p>Du 23 au 28 juin 2023, la Ville de Bruxelles organisera la 'Fête des Marchés' dans le cadre de la campagne J'aime mon marché. Cette campagne a pour objectif de promouvoir les marchés et leur dynamisme. De nombreuses animations seront organisées sur les marchés qui ont lieu chaque semaine sur le territoire de la Ville.</p>
+        <h2>ÉVÉNEMENTS À VENIR</h2>
+
+        <h3>La fête des marchés</h3>
+
+        <div class="eventMarcheBx">
+            <img src="images/marchésBx.png" alt="" class="marchesBrx"><br>
+            <img src="images/Event1Bruxelles.jpg" alt="" class="marcheBx">
+        </div>
+
+        <p class="descriptionEvent">Du 23 au 28 juin 2023, la Ville de Bruxelles organisera la 'Fête des Marchés' dans le cadre de la campagne J'aime mon marché. Cette campagne a pour objectif de promouvoir les marchés et leur dynamisme. De nombreuses animations seront organisées sur les marchés qui ont lieu chaque semaine sur le territoire de la Ville.</p>
     </div><br>
-        <img src="images/Event1Bruxelles.jpg" alt="" class="marcheBx">
+        
+
+
 
     
 
