--- a/azor.html
+++ b/azor.html
@@ -99,24 +99,22 @@
 <a href="https://www.tiktok.com/@bxl_online"><i class="fa-brands fa-tiktok"></a></i>
 <a href="https://open.spotify.com/user/bxl_online?si=3e0a3215512b477d&nd=1"><i class="fa-brands fa-spotify"></a></i>
 <p class="brucity">Centre Administratif Brucity - Rue des Halles 4 - 1000 Bruxelles</p>
-<span class="logogo">
+
+
 <a href="https://www.bruxelles.be/patrimoine-mondial-de-lunesco"><img class="patrimoine" src="images/patrimoin.png"></a>
+<a href="https://www.bruxelles.be/commune-amie-des-animaux"><img class="animalsfriends" src="images/amieanimaux-removebg-preview.png"></a> <br>
 <a href="https://www.bruxelles.be/patrimoine-mondial-de-lunesco"><img class="unesco" src="images/unesco.png"></a>
-</span>
 
-<ul classer="foo">
-    <li><a href="">CONTACT</a></li>
-    <li><a href="https://www.bruxelles.be/journaliste">PRESSE</a></li>
-    <li><a href="https://www.bruxelles.be/services-de-secours-et-durgence">URGENCES</a></li>
-    <li><a href="https://www.bruxelles.be/mentions-legales">MENTIONS LÉGALES</a></li>
-    <li><a href="https://www.bruxelles.be/mentions-legales">CONFIDENTIALITÉ</a></li>
-    <li><a href="https://www.bruxelles.be/declaration-daccessibilite">ACCESSIBILITÉ</a></li>
-</ul>
-<span class="unes">
-
-    <a href="https://www.bruxelles.be/commune-amie-des-animaux"><img class="animalsfriends" src="images/amieanimaux-removebg-preview.png"></a> 
+    
     <img class="citybxl" src="images/ville-bxl.png">
-    </span>
+    <ul classer="foo">
+        <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="https://www.bruxelles.be/journaliste">PRESSE</a></li>
+        <li><a href="https://www.bruxelles.be/services-de-secours-et-durgence">URGENCES</a></li>
+        <li><a href="https://www.bruxelles.be/mentions-legales">MENTIONS LÉGALES</a></li>
+        <li><a href="https://www.bruxelles.be/mentions-legales">CONFIDENTIALITÉ</a></li>
+        <li><a href="https://www.bruxelles.be/declaration-daccessibilite">ACCESSIBILITÉ</a></li>
+    </ul>
 <p class="obcn">Site créé et hébergé par <span class="strg">OBCN</span></p>
 </footer>
 
