--- a/SCSS/evenement.html
+++ b/SCSS/evenement.html
@@ -49,7 +49,28 @@
         </div>
 
         <p class="descriptionEvent">Du 23 au 28 juin 2023, la Ville de Bruxelles organisera la 'Fête des Marchés' dans le cadre de la campagne J'aime mon marché. Cette campagne a pour objectif de promouvoir les marchés et leur dynamisme. De nombreuses animations seront organisées sur les marchés qui ont lieu chaque semaine sur le territoire de la Ville.</p>
-    </div><br>
+    </div><br><br>
+
+    <div class="eventVoisinsBx">
+        <div>
+        <h3>La fête des voisins 2023</h3>
+
+        <p>Le vendredi 26 juin 2023, la Fête des Voisins s'organise à Bruxelles et simultanément dans toute l'Europe.
+
+            Dans toute l'Europe, mais aussi sur le territoire de la Ville de Bruxelles, des millions de voisins se rencontrent pour boire un verre, manger un morceau et échanger. Le but de l'opération ? Apprendre à mieux se connaître.
+            
+            Cette année, la Fête des Voisins fête ses 20 ans d'existence en Belgique.</p>
+
+        <h4>Comment participer ?</h4>
+
+        <p>De manière générale, les Bruxellois qui souhaitent se joindre à la fête peuvent se procurer l'affiche à placarder dans leur immeuble ou sur la façade de leur maison et les invitations à envoyer à leurs voisins :</p>
+        <p>Voici à titre d'illustration, une vidéo sur le déroulement de la fête des voisins 2019 : </p>
+    </div>
+        <img class="afficheVoisins" src="images/fêtedesvoisins.jpg" alt="">
+
+    </div><br><br>
+
+    <iframe class="youtubeVoisin" width="1115" height="720" src="https://www.youtube.com/embed/cfHc0RBNXAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         
 
 
