--- a/azor.html
+++ b/azor.html
@@ -22,7 +22,7 @@
 
     
 
-        <header class="bvnBruxelles">
+        <!--<header class="bvnBruxelles">
         <img class="logoBruxelles" src="images/BXL_logo_horiz_FR_NL.png" alt="">
 
 
@@ -118,8 +118,20 @@
         <li><a href="https://www.bruxelles.be/declaration-daccessibilite">ACCESSIBILITÉ</a></li>
     </ul>
 <p class="obcn">Site créé et hébergé par <span class="strg">OBCN</span></p>
-</footer>
-
+</footer>-->
+<div class="container">
+<div class="gallery">
+    <span style="--i: 1"><a href="https://www.bruxelles.be/journaliste"><img src="images/brussels-flower-carpet-and-flowertime.jpg" alt="Image 2"></a>
+        <p>Texte de l'image 2</p></span>
+    <span style="--i: 2"><img src="images/1000_F_72539680_YeycGC1y3otKMCxpAZfJQ0PHiuY86YJU.jpg" alt=""></span>
+    <span style="--i: 3"><img src="images/BrucityCA2.jpg" alt=""></span>
+    <span style="--i: 4"><img src="images/Brussels-Grand-Place.jpg" alt=""></span>
+    <span style="--i: 5"><img src="images/brussels-flower-carpet-and-flowertime.jpg" alt=""></span>
+    <span style="--i: 6"><img src="images/pride_0.jpg" alt=""></span>
+    <span style="--i: 7"><img src="images/Brussels-Grand-Place.jpg" alt=""></span>
+    <span style="--i: 8"><img src="images/bruxelles-logo.png" alt=""></span>
+</div>
+</div>
 
 </body>
 </html>
