--- a/SCSS/contact.html
+++ b/SCSS/contact.html
@@ -363,9 +363,9 @@
 
     <div class="formNous">
 
-        <h2>CONTACT GÉNÉRAL</h2>
-        <p>02 279 22 11</p>
-        <h2>CONTACTER UN ÉLU OU UN SERVICE ADMINISTRATIF</h2>
+        <h2 class="gen">CONTACT GÉNÉRAL</h2>
+        <p class="gen">02 279 22 11</p>
+        <h2 class="gen">CONTACTER UN ÉLU OU UN SERVICE ADMINISTRATIF</h2>
         <p class="contactTel">Pour contacter plus directement par téléphone, courrier postal ou électronique, un élu ou un service administratif, il convient d'utiliser les renseignements fournis sur les pages de ce site web qui les concernent, notamment via les pages:</p>
         <div class="contactDirect">
                 <a href="https://www.bruxelles.be/college-des-bourgmestre-et-echevins">Bourgmestre</a>
@@ -405,9 +405,10 @@
                 <li class="cpumlca"><a href="contact.html">CONTACT</a></li>
                 <li class="cpumlca"><a href="https://www.bruxelles.be/journaliste">PRESSE</a></li>
                 <li class="cpumlca"><a href="https://www.bruxelles.be/services-de-secours-et-durgence">URGENCES</a></li>
-                <li class="cpumlca"><a href="https://www.bruxelles.be/mentions-legales">MENTIONS LÉGALES</a></li>
                 <li class="cpumlca"><a href="https://www.bruxelles.be/mentions-legales">CONFIDENTIALITÉ</a></li>
-                <li class="cpumlca"><a href="https://www.bruxelles.be/declaration-daccessibilite">ACCESSIBILITÉ</a></li>
+                <li class="cpumlca"><a  href="https://www.bruxelles.be/mentions-legales">MENTIONS LÉGALES</a></li>
+                 <li class="cpumlca"><a  href="https://www.bruxelles.be/declaration-daccessibilite">ACCESSIBILITÉ</a></li>
+                
             </ul>
         <p class="obcn">Site créé et hébergé par OBCN</p>
         
