--- a/azor.html
+++ b/azor.html
@@ -20,7 +20,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anuphan&family=Fira+Sans:wght@100;400&family=Montserrat&display=swap" rel="stylesheet">
     </head>
 
-    
+   
+<div>
+    <input type="checkbox" class="checkbox" id="checkbox">
+    <label for="checkbox" class="checkbox-label">
+      <i class="fas fa-moon"></i>
+      <i class="fas fa-sun"></i>
+      <span class="ball"></span>
+    </label>
+  </div>
+    <script type="text/javascript" src="azor.js"></script>
 
         <!--<header class="bvnBruxelles">
         <img class="logoBruxelles" src="images/BXL_logo_horiz_FR_NL.png" alt="">
@@ -119,19 +128,8 @@
     </ul>
 <p class="obcn">Site créé et hébergé par <span class="strg">OBCN</span></p>
 </footer>-->
-<div class="container">
-<div class="gallery">
-    <span style="--i: 1"><a href="https://www.bruxelles.be/journaliste"><img src="images/brussels-flower-carpet-and-flowertime.jpg" alt="Image 2"></a>
-        <p>Texte de l'image 2</p></span>
-    <span style="--i: 2"><img src="images/1000_F_72539680_YeycGC1y3otKMCxpAZfJQ0PHiuY86YJU.jpg" alt=""></span>
-    <span style="--i: 3"><img src="images/BrucityCA2.jpg" alt=""></span>
-    <span style="--i: 4"><img src="images/Brussels-Grand-Place.jpg" alt=""></span>
-    <span style="--i: 5"><img src="images/brussels-flower-carpet-and-flowertime.jpg" alt=""></span>
-    <span style="--i: 6"><img src="images/pride_0.jpg" alt=""></span>
-    <span style="--i: 7"><img src="images/Brussels-Grand-Place.jpg" alt=""></span>
-    <span style="--i: 8"><img src="images/bruxelles-logo.png" alt=""></span>
-</div>
-</div>
+
+
 
 </body>
 </html>
