--- a/SCSS/contact.html
+++ b/SCSS/contact.html
@@ -26,7 +26,7 @@
                 <a href="evenement.html" class="NECP">ÉVÉNEMENTS</a>
                 <a href="contact.html" class="NECP">CONTACT</a>
                 <a href="https://www.belgium.be/fr/services_en_ligne" class="NECP">PORTAIL</a>
-                <button onclick="toggleDarkMode()" id="sombre">
+                <button onclick="toggleDarkMode()" id="dark">
                     <span id="darkModeIcon">🌙</span></button>
             
                    
