--- a/SCSS/evenement.html
+++ b/SCSS/evenement.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/bea07da996.js" crossorigin="anonymous"></script>
     <title>Bruxelles / évenements</title>
@@ -16,7 +16,7 @@
 <body>
 
     <header class="bivnBruxelles">
-
+        
         <a href="accueil.html"><img src="images/Bruxelles-stad.png" class="logoBruxelles" alt="logo de bruxelles"></a>
         
         <nav class="liste">
