--- a/SCSS/nl_accueil.html
+++ b/SCSS/nl_accueil.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-    <meta charset="nl">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
@@ -176,7 +176,7 @@
              <li class="cpumlca"><a  href="https://www.brussel.be/toegankelijkheidsverklaring">TOEGANKELIJKHEID</a></li>
             
         </ul>
-    <p class="obcn">Site gemaakt en gehost door &nbsp<a class="stng" href="https://github.com/BenoitDeud/Bruxelles-je-t-aime">OBCN</a></p>
+    <p class="obcn">Site gemaakt en gehost door &nbsp; <a class="stng" href="https://github.com/BenoitDeud/Bruxelles-je-t-aime">OBCN</a></p>
     
     </footer>
 
