--- a/SCSS/nl_accueil.html
+++ b/SCSS/nl_accueil.html
@@ -176,7 +176,7 @@
              <li class="cpumlca"><a  href="https://www.brussel.be/toegankelijkheidsverklaring">TOEGANKELIJKHEID</a></li>
             
         </ul>
-    <p class="obcn">Site gemaakt en gehost door &nbsp; <a class="stng" href="https://github.com/BenoitDeud/Bruxelles-je-t-aime">OBCN</a></p>
+    <p class="obcn">Site gemaakt en gehost door &nbsp; <a class="stng" href="link_figma.html">OBCN</a></p>
     
     </footer>
 
