--- a/SCSS/en_contact.html
+++ b/SCSS/en_contact.html
@@ -129,8 +129,8 @@
                 </optgroup>
                 <optgroup label="Europe">
                     <!--European countries-->
-                    <option value="albania">Albanian</option>
-                    <option value="denmark">Dannish</option>
+                    <option value="albania">Belgian</option>
+                    <option value="denmark">Dutch</option>
                     <option value="estonia">Estonian</option>
                     <option value="france">French</option>
                     <option value="italy">Italian</option>
