--- a/SCSS/fr_contact.html
+++ b/SCSS/fr_contact.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="formulaire">
-
+        <div class="atomium"></div>
         <div class="imageFormulaire">
             <img src="images/Bruxelles-stad.png" alt="" class="logoBruxelles">
         </div><br>
@@ -128,8 +128,8 @@
                 </optgroup>
                 <optgroup label="Europe">
                     <!--European countries-->
-                    <option value="albania">Albanais.e</option>
-                    <option value="denmark">Danois.e</option>
+                    <option value="albania">Belge</option>
+                    <option value="denmark">Néerlandais.e</option>
                     <option value="estonia">Estonien.ne</option>
                     <option value="france" selected>Français.e</option>
                     <option value="italy">Italien.ne</option>
