--- a/SCSS/nl_contact.html
+++ b/SCSS/nl_contact.html
@@ -129,8 +129,8 @@
                 </optgroup>
                 <optgroup label="Europa">
                     <!--European countries-->
-                    <option value="albania">Albanees</option>
-                    <option value="denmark">Deens</option>
+                    <option value="albania">Belg</option>
+                    <option value="denmark">Nederlander</option>
                     <option value="estonia">Ests</option>
                     <option value="france" selected>Frans</option>
                     <option value="italy">Italiaans</option>
