--- a/SCSS/en_event.html
+++ b/SCSS/en_event.html
@@ -54,7 +54,12 @@
           <input type="text" placeholder="Search..." class="search-input">
           <button class="search-button">Search</button>
         </div>
-    </div>
+    </div><br>
+    <div class="langdropdown">
+        <a href="fr_evenement.html">FR</a>  
+        <a href="nl_event.html">NL</a>
+        <a href="en_event.html">EN</a>
+</div>
 
     <div class="eventBx">
 
@@ -98,11 +103,7 @@
 
     <button onclick="scrollToTop()" id="myBtn"><i class="fa-solid fa-arrow-up"></i></button>
     <footer>
-        <div class="langdropdown">
-            <a href="fr_evenement.html">FR</a>  
-            <a href="nl_event.html">NL</a>
-            <a href="en_event.html">EN</a>
-    </div>
+     
 
 <a href="https://twitter.com/CityBrussels"><i class="fa-brands fa-twitter"></i></a>
 <a href="https://www.facebook.com/BXLbrusselscity/"><i class="fa-brands fa-facebook-f"></i></a>
