--- a/SCSS/fr_evenement.html
+++ b/SCSS/fr_evenement.html
@@ -51,7 +51,12 @@
           <input type="text" placeholder="Rechercher..." class="search-input">
           <button class="search-button">Rechercher</button>
         </div>
-    </div>
+    </div><br>
+    <div class="langdropdown">
+        <a href="fr_evenement.html">FR</a>  
+        <a href="nl_event.html">NL</a>
+        <a href="en_event.html">EN</a>
+</div>
 
     <div class="eventBx">
 
@@ -95,11 +100,7 @@
 
     <button onclick="scrollToTop()" id="myBtn"><i class="fa-solid fa-arrow-up"></i></button>
     <footer>
-        <div class="langdropdown">
-            <a href="fr_evenement.html">FR</a>  
-            <a href="nl_event.html">NL</a>
-            <a href="en_event.html">EN</a>
-    </div>
+        
         <a href="https://twitter.com/VilleBruxelles"><i class="fa-brands fa-twitter"></i></a>
         <a href="https://www.facebook.com/BXLvilledebruxelles/"><i class="fa-brands fa-facebook-f"></i></a>
         <a href="https://www.instagram.com/bxl_online/"><i class="fa-brands fa-instagram"></i></a>
